--- a/index.html
+++ b/index.html
@@ -1,92 +1,109 @@
 <!DOCTYPE html>
+
+<html>
+
 <body>
-<h1>Basic Profile Information</h1>
-<h2>Navleen Kaur</h2>
-<h3>Major: Information Technology</h3>
-<img id="profile-pic" height=200px src="avatar.jpg" />
+    <nav>
+        <a href="#basic">Basic Profile Information</a> |
+        <a href="#education">Education Summary</a> |
+        <a href="#work">Work Experience</a> |
+        <a href="#skills">Programming Skills</a> |
+        <a href="#interests">General Interests</a> |
+        <a href="#favorites">Favorites</a> |
+        <a href="#websites">Favorite Websites</a>
+    </nav>
 
-<hr>
+    <h1 id="basic">Basic Profile Information</h1>
+    <h2>Navleen Kaur</h2>
+    <h3>Major: Information Technology</h3>
+    <img id="profile-pic" height=200px src="avatar.jpg" />
 
-<h1>Education Summary</h1>
-<p>Got a High School Diploma from Bronx High School of Science. <br> Currently completely Bachelor of Science at St. John's University.</p>
+    <hr>
 
-<hr>
+    <h1 id="education">Education Summary</h1>
+    <p>Got a High School Diploma from Bronx High School of Science. <br> Currently completely Bachelor of Science at St.
+        John's University.</p>
 
-<h1>Work Experience</h1>
-<ul>
-    <li>Girls Who Code</li>
-    <li>Douglas Elliman</li>
-    <li>Barnes and Nobles</li>
-</ul>
+    <hr>
 
-<hr>
+    <h1 id="work">Work Experience</h1>
+    <ul>
+        <li>Girls Who Code</li>
+        <li>Douglas Elliman</li>
+        <li>Barnes and Nobles</li>
+    </ul>
 
-<h1>Programming Skills</h1>
+    <hr>
 
-<table>
-<tr>
-    <th>Skill</th>
-    <th>Level</th>
-</tr>
-<tr>
-    <td>Java</td>
-    <td>Intermediate</td>
-</tr>
-<tr>
-    <td>HTML</td>
-    <td>Intermediate</td>
-</tr>
-<tr>
-    <td>CSS</td>
-    <td>Intermediate</td>
-</tr>
-<tr>
-    <td>Javascript</td>
-    <td>Intermediate</td>
-</tr>
-</table>
+    <h1 id="skills">Programming Skills</h1>
+    <table>
+        <tr>
+            <th>Skill</th>
+            <th>Level</th>
+        </tr>
+        <tr>
+            <td>Java</td>
+            <td>Intermediate</td>
+        </tr>
+        <tr>
+            <td>HTML</td>
+            <td>Intermediate</td>
+        </tr>
+        <tr>
+            <td>CSS</td>
+            <td>Intermediate</td>
+        </tr>
+        <tr>
+            <td>Javascript</td>
+            <td>Intermediate</td>
+        </tr>
+    </table>
 
-<hr>
+    <hr>
 
-<h1>General Interests</h1>
-<ul>
-    <li>Graphic Design</li>
-    <li>Reading</li>
-    <li>Doing any type of art</li>
-</ul>
+    <h1 id="interests">General Interests</h1>
+    <ul>
+        <li>Graphic Design</li>
+        <li>Reading</li>
+        <li>Doing any type of art</li>
+    </ul>
 
-<hr>
+    <hr>
 
-<h1>Favorites</h1>
-<h3>Song</h3>
-<p>Do I Wanna Know? by Arctic Monkeys</p>
-<a href="https://www.youtube.com/watch?v=bpOSxM0rNPM" target="_blank">Listen to Song</a>
-<h3>Film</h3>
-<p>Harry Potter and the Sorcerer's Stone</p>
-<a href="https://www.youtube.com/watch?v=VyHV0BRtdxo&ab_channel=MovieclipsClassicTrailers" target="_blank">Film Trailer</a>
-<h3>TV Show</h3>
-<p>The Office</p>
-<a href="https://www.youtube.com/watch?v=jz1omRneAGg&ab_channel=FinalTrailers" target="_blank">Season 1 Trailer</a>
+    <h1 id="favorites">Favorites</h1>
+    <h3>Song</h3>
+    <p>Do I Wanna Know? by Arctic Monkeys</p>
+    <a href="https://www.youtube.com/watch?v=bpOSxM0rNPM" target="_blank">Listen to Song</a>
+    <h3>Film</h3>
+    <p>Harry Potter and the Sorcerer's Stone</p>
+    <a href="https://www.youtube.com/watch?v=VyHV0BRtdxo&ab_channel=MovieclipsClassicTrailers" target="_blank">Film
+        Trailer</a>
+    <h3>TV Show</h3>
+    <p>The Office</p>
+    <a href="https://www.youtube.com/watch?v=jz1omRneAGg&ab_channel=FinalTrailers" target="_blank">Season 1 Trailer</a>
 
-<hr>
+    <hr>
 
-<h1>Favorite Website</h1>
+    <h1 id="websites">Favorite Website</h1>
 
 
-<ul>
-    <li>
-        <a href="http://youtube.com/" target="_blank">Youtube</a>
-      <ul>
-            <li>YouTube is an American online video-sharing platform.</li>
-      </ul>
-    </li>
-    <li>
-        <a href="https://www2.hm.com/en_us/index.html" target="_blank">H&M</a>
-      <ul>
-            <li>Swedish multinational clothing-retail company known for its fast-fashion clothing for men, women, teenagers and children.</li>
-      </ul>
-    </li>
-  </ul>
+    <ul>
+        <li>
+            <a href="http://youtube.com/" target="_blank">Youtube</a>
+            <ul>
+                <li>YouTube is an American online video-sharing platform.</li>
+            </ul>
+        </li>
+        <li>
+            <a href="https://www2.hm.com/en_us/index.html" target="_blank">H&M</a>
+            <ul>
+                <li>Swedish multinational clothing-retail company known for its fast-fashion clothing for men, women,
+                    teenagers and children.</li>
+            </ul>
+        </li>
+    </ul>
 
 
 </body>
+
+</html>
