Added my projects section

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-
+<head>
+    <title>Profile</title>
+</head>
 <html>
-
 <body>
     <nav>
         <a href="#basic">Basic Profile Information</a> |
@@ -10,7 +11,8 @@
         <a href="#skills">Programming Skills</a> |
         <a href="#interests">General Interests</a> |
         <a href="#favorites">Favorites</a> |
-        <a href="#websites">Favorite Websites</a>
+        <a href="#websites">Favorite Websites</a> |
+        <a href="#projects">My Projects</a>
     </nav>
 
     <h1 id="basic">Basic Profile Information</h1>
@@ -84,7 +86,7 @@
 
     <hr>
 
-    <h1 id="websites">Favorite Website</h1>
+    <h1 id="websites">Favorite Websites</h1>
 
 
     <ul>
@@ -103,6 +105,17 @@
         </li>
     </ul>
 
+<hr>
+
+<h1 id="projects">My Projects</h1>
+<ul>
+    <li>
+        <a href="https://codingnav.github.io/Class-Profile/" target="_blank">Profile</a>
+        <ul>
+            <li>My profile with basic information about my education, work, skills, and interests.</li>
+        </ul>
+    </li>
+</ul>
 
 </body>
 
