--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+
 <head>
     <title>Profile</title>
 </head>
 <html>
+
 <body>
     <nav>
         <a href="#basic">Basic Profile Information</a> |
@@ -15,107 +17,124 @@
         <a href="#projects">My Projects</a>
     </nav>
 
-    <h1 id="basic">Basic Profile Information</h1>
-    <h2>Navleen Kaur</h2>
-    <h3>Major: Information Technology</h3>
-    <img id="profile-pic" height=200px src="avatar.jpg" />
+    <div>
+        <h1 id="basic">Basic Profile Information</h1>
+        <h2>Navleen Kaur</h2>
+        <h3>Major:<span>Information Technology</span></h3>
+        <img id="profile-pic" height=200px src="avatar.jpg" />
+    </div>
 
     <hr>
 
-    <h1 id="education">Education Summary</h1>
-    <p>Got a High School Diploma from Bronx High School of Science. <br> Currently completely Bachelor of Science at St.
-        John's University.</p>
+    <div>
+        <h1 id="education">Education Summary</h1>
+        <p>Got a High School Diploma from Bronx High School of Science. <br> Currently completely Bachelor of Science at
+            St.
+            John's University.</p>
+    </div>
 
     <hr>
 
-    <h1 id="work">Work Experience</h1>
-    <ul>
-        <li>Girls Who Code</li>
-        <li>Douglas Elliman</li>
-        <li>Barnes and Nobles</li>
-    </ul>
-
-    <hr>
-
-    <h1 id="skills">Programming Skills</h1>
-    <table>
-        <tr>
-            <th>Skill</th>
-            <th>Level</th>
-        </tr>
-        <tr>
-            <td>Java</td>
-            <td>Intermediate</td>
-        </tr>
-        <tr>
-            <td>HTML</td>
-            <td>Intermediate</td>
-        </tr>
-        <tr>
-            <td>CSS</td>
-            <td>Intermediate</td>
-        </tr>
-        <tr>
-            <td>Javascript</td>
-            <td>Intermediate</td>
-        </tr>
-    </table>
-
-    <hr>
-
-    <h1 id="interests">General Interests</h1>
-    <ul>
-        <li>Graphic Design</li>
-        <li>Reading</li>
-        <li>Doing any type of art</li>
-    </ul>
-
-    <hr>
-
-    <h1 id="favorites">Favorites</h1>
-    <h3>Song</h3>
-    <p>Do I Wanna Know? by Arctic Monkeys</p>
-    <a href="https://www.youtube.com/watch?v=bpOSxM0rNPM" target="_blank">Listen to Song</a>
-    <h3>Film</h3>
-    <p>Harry Potter and the Sorcerer's Stone</p>
-    <a href="https://www.youtube.com/watch?v=VyHV0BRtdxo&ab_channel=MovieclipsClassicTrailers" target="_blank">Film
-        Trailer</a>
-    <h3>TV Show</h3>
-    <p>The Office</p>
-    <a href="https://www.youtube.com/watch?v=jz1omRneAGg&ab_channel=FinalTrailers" target="_blank">Season 1 Trailer</a>
-
-    <hr>
-
-    <h1 id="websites">Favorite Websites</h1>
-
-
-    <ul>
-        <li>
-            <a href="http://youtube.com/" target="_blank">Youtube</a>
-            <ul>
-                <li>YouTube is an American online video-sharing platform.</li>
-            </ul>
-        </li>
-        <li>
-            <a href="https://www2.hm.com/en_us/index.html" target="_blank">H&M</a>
-            <ul>
-                <li>Swedish multinational clothing-retail company known for its fast-fashion clothing for men, women,
-                    teenagers and children.</li>
-            </ul>
-        </li>
-    </ul>
-
-<hr>
-
-<h1 id="projects">My Projects</h1>
-<ul>
-    <li>
-        <a href="https://codingnav.github.io/Class-Profile/" target="_blank">Profile</a>
+    <div>
+        <h1 id="work">Work Experience</h1>
         <ul>
-            <li>My profile with basic information about my education, work, skills, and interests.</li>
+            <li>Girls Who Code</li>
+            <li>Douglas Elliman</li>
+            <li>Barnes and Nobles</li>
         </ul>
-    </li>
-</ul>
+    </div>
+
+    <hr>
+
+    <div>
+        <h1 id="skills">Programming Skills</h1>
+        <table>
+            <tr>
+                <th>Skill</th>
+                <th>Level</th>
+            </tr>
+            <tr>
+                <td>Java</td>
+                <td>Intermediate</td>
+            </tr>
+            <tr>
+                <td>HTML</td>
+                <td>Intermediate</td>
+            </tr>
+            <tr>
+                <td>CSS</td>
+                <td>Intermediate</td>
+            </tr>
+            <tr>
+                <td>Javascript</td>
+                <td>Intermediate</td>
+            </tr>
+        </table>
+    </div>
+
+    <hr>
+
+    <div>
+        <h1 id="interests">General Interests</h1>
+        <ul>
+            <li>Graphic Design</li>
+            <li>Reading</li>
+            <li>Doing any type of art</li>
+        </ul>
+    </div>
+
+    <hr>
+
+    <div>
+        <h1 id="favorites">Favorites</h1>
+        <h3>Song</h3>
+        <p>Do I Wanna Know? by Arctic Monkeys</p>
+        <a href="https://www.youtube.com/watch?v=bpOSxM0rNPM" target="_blank">Listen to Song</a>
+        <h3>Film</h3>
+        <p>Harry Potter and the Sorcerer's Stone</p>
+        <a href="https://www.youtube.com/watch?v=VyHV0BRtdxo&ab_channel=MovieclipsClassicTrailers" target="_blank">Film
+            Trailer</a>
+        <h3>TV Show</h3>
+        <p>The Office</p>
+        <a href="https://www.youtube.com/watch?v=jz1omRneAGg&ab_channel=FinalTrailers" target="_blank">Season 1
+            Trailer</a>
+    </div>
+
+    <hr>
+
+    <div>
+        <h1 id="websites">Favorite Websites</h1>
+        <ul>
+            <li>
+                <a href="http://youtube.com/" target="_blank">Youtube</a>
+                <ul>
+                    <li>YouTube is an American online video-sharing platform.</li>
+                </ul>
+            </li>
+            <li>
+                <a href="https://www2.hm.com/en_us/index.html" target="_blank">H&M</a>
+                <ul>
+                    <li>Swedish multinational clothing-retail company known for its fast-fashion clothing for men,
+                        women,
+                        teenagers and children.</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+
+    <hr>
+
+    <div>
+        <h1 id="projects">My Projects</h1>
+        <ul>
+            <li>
+                <a href="https://codingnav.github.io/Class-Profile/" target="_blank">Profile</a>
+                <ul>
+                    <li>My profile with basic information about my education, work, skills, and interests.</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 
 </body>
 
