--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <div>
         <h1 id="education">Education Summary</h1>
         <p>Got a High School Diploma from Bronx High School of Science. <br> Currently completely Bachelor of Science at
-            St.
-            John's University.</p>
+            St.John's University.</p>
     </div>
 
     <hr>
@@ -89,15 +88,13 @@
         <h1 id="favorites">Favorites</h1>
         <h3>Song</h3>
         <p>Do I Wanna Know? by Arctic Monkeys</p>
-        <a href="https://www.youtube.com/watch?v=bpOSxM0rNPM" target="_blank">Listen to Song</a>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bpOSxM0rNPM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h3>Film</h3>
         <p>Harry Potter and the Sorcerer's Stone</p>
-        <a href="https://www.youtube.com/watch?v=VyHV0BRtdxo&ab_channel=MovieclipsClassicTrailers" target="_blank">Film
-            Trailer</a>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VyHV0BRtdxo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h3>TV Show</h3>
         <p>The Office</p>
-        <a href="https://www.youtube.com/watch?v=jz1omRneAGg&ab_channel=FinalTrailers" target="_blank">Season 1
-            Trailer</a>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/jz1omRneAGg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <hr>
@@ -105,12 +102,14 @@
     <div>
         <h1 id="websites">Favorite Websites</h1>
         <ul>
+            <img width=15% src="https://www.lifelinesoftware.com/images/YouTubeLink.jpg">
             <li>
                 <a href="http://youtube.com/" target="_blank">Youtube</a>
                 <ul>
                     <li>YouTube is an American online video-sharing platform.</li>
                 </ul>
             </li>
+            <img width=8% src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/0000/5239/brand.gif?itok=K6l2JzBp">
             <li>
                 <a href="https://www2.hm.com/en_us/index.html" target="_blank">H&M</a>
                 <ul>
