Finished contact forms

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#favorites">Favorites</a> |
         <a href="#websites">Favorite Websites</a> |
         <a href="#projects">My Projects</a>
+        <a href="#contact">Contact</a>
     </nav>
 
     <div>
@@ -135,6 +136,24 @@
         </ul>
     </div>
 
+    <hr>
+
+    <div class="wrapper main-content">
+        <h1 id="main-heading">Contact</h1>
+
+        <form>
+            <label for="enter-name">Name</label><br>
+            <input type="text" id="enter-name" name="name" placeholder="John Smith"><br>
+
+            <label for="enter-email">Email</label><br>
+            <input type="text" id="enter-email" name="email" placeholder="example@gmail.com"><br>
+
+            <label for="enter-message">Message</label><br>
+            <textarea name="message" rows="10" cols="30"></textarea>
+            <button type="submit">Submit</button>
+          </form>
+          
+    </div>
 </body>
 
 </html>
