Set up file structure

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <head>
     <title>Profile</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/mycss_web.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/mycss_tablet.css">
 </head>
 <html>
 
@@ -14,7 +16,7 @@
         <a href="#interests">General Interests</a> |
         <a href="#favorites">Favorites</a> |
         <a href="#websites">Favorite Websites</a> |
-        <a href="#projects">My Projects</a>
+        <a href="#projects">My Projects</a> |
         <a href="#contact">Contact</a>
     </nav>
 
@@ -22,7 +24,7 @@
         <h1 id="basic">Basic Profile Information</h1>
         <h2>Navleen Kaur</h2>
         <h3>Major:<span>Information Technology</span></h3>
-        <img id="profile-pic" height=200px src="avatar.jpg" />
+        <img id="profile-pic" height=200px src="assets/images/avatar.jpg" />
     </div>
 
     <hr>
