--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Profile</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./assets/css/mycss_web.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/mycss_tablet.css">
     <style>
