Changed Nav Styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         #basic {
             font-size: 50px;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
-            color: #009d99; 
+            color: #009d99;
+            text-align: center;
         }
     </style>
 </head>
@@ -17,15 +18,16 @@
 
 <body>
     <nav>
-        <a href="#basic">Basic Profile Information</a> |
-        <a href="#education">Education Summary</a> |
-        <a href="#work">Work Experience</a> |
-        <a href="#skills">Programming Skills</a> |
-        <a href="#interests">General Interests</a> |
-        <a href="#favorites">Favorites</a> |
-        <a href="#websites">Favorite Websites</a> |
-        <a href="#projects">My Projects</a> |
-        <a href="#contact">Contact</a>
+        <h1>Table of Content</h1>
+        <a href="#basic">- Basic Profile Information</a> <br> 
+        <a href="#education">- Education Summary</a> <br> 
+        <a href="#work">- Work Experience</a> <br> 
+        <a href="#skills">- Programming Skills</a> <br> 
+        <a href="#interests">- General Interests</a> <br> 
+        <a href="#favorites">- Favorites</a> <br> 
+        <a href="#websites">- Favorite Websites</a> <br> 
+        <a href="#projects">- My Projects</a> <br> 
+        <a href="#contact">- Contact</a>
     </nav>
 
     <div>
@@ -39,7 +41,8 @@
 
     <div>
         <h1 class="heading" id="education">Education Summary</h1>
-        <p class="content">Got a High School Diploma from Bronx High School of Science. <br> Currently completely Bachelor of Science at
+        <p class="content">Got a High School Diploma from Bronx High School of Science. <br> Currently completely
+            Bachelor of Science at
             St. John's University.</p>
     </div>
 
@@ -99,13 +102,16 @@
         <h1 class="heading" id="favorites">Favorites</h1>
         <h3>Song</h3>
         <p class="content">Do I Wanna Know? by Arctic Monkeys</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/bpOSxM0rNPM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bpOSxM0rNPM" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h3>Film</h3>
         <p class="content">Harry Potter and the Sorcerer's Stone</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/VyHV0BRtdxo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VyHV0BRtdxo" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h3>TV Show</h3>
         <p class="content">The Office</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/jz1omRneAGg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/jz1omRneAGg" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <hr>
@@ -120,13 +126,13 @@
                     <li>YouTube is an American online video-sharing platform.</li>
                 </ul>
             </li>
-            <img style="width:8%;" src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/0000/5239/brand.gif?itok=K6l2JzBp">
+            <img style="width:8%;"
+                src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/0000/5239/brand.gif?itok=K6l2JzBp">
             <li>
                 <a id="link" href="https://www2.hm.com/en_us/index.html" target="_blank">H&M</a>
                 <ul class="content">
                     <li>Swedish multinational clothing-retail company known for its fast-fashion clothing for men,
-                        women,
-                        teenagers and children.</li>
+                        women, teenagers and children.</li>
                 </ul>
             </li>
         </ul>
@@ -140,7 +146,8 @@
             <li>
                 <a id="link" href="https://codingnav.github.io/Class-Profile/" target="_blank">Profile</a>
                 <ul>
-                    <li class="content">My profile with basic information about my education, work, skills, and interests.</li>
+                    <li class="content">My profile with basic information about my education, work, skills, and
+                        interests.</li>
                 </ul>
             </li>
         </ul>
@@ -161,8 +168,8 @@
             <label for="enter-message">Message</label><br>
             <textarea name="message" rows="10" cols="30"></textarea> <br>
             <button type="submit">Submit</button>
-          </form>
-          
+        </form>
+
     </div>
 </body>
 
